[package]
name = "stricter"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
num-traits = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
ssh2 = "0.4"
toml = "0.5"

# master + https://github.com/RustPython/RustPython/pull/1507
rustpython          = { git = "https://github.com/FauxFaux/RustPython", rev = "ea5be0997396601be2a352a3b94b20065463ca74" }
rustpython-compiler = { git = "https://github.com/FauxFaux/RustPython", rev = "ea5be0997396601be2a352a3b94b20065463ca74" }
rustpython-vm       = { git = "https://github.com/FauxFaux/RustPython", rev = "ea5be0997396601be2a352a3b94b20065463ca74" }

[dependencies.stricter-proto]
path = "../stricter-proto"
