[package]
name = "stricter"
version = "0.1.0"
authors = ["Chris West (Faux) <git@goeswhere.com>"]
edition = "2018"

[dependencies]
failure = "0.1"
log = "0.4"
maplit = "1"
num-traits = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
ssh2 = "0.5"
toml = "0.5"
url = "2"

[dependencies.stricter-proto]
path = "../stricter-proto"

[build-dependencies]
vergen = "3"
